# RabbitRAG

./: .gitignore  README.md  pdf_to_text.py  pyproject.toml
backend/: constants.py
data/: Dwarf_Hotot.txt  Dwarf_rabbit.txt  Holland_Lop.txt  Netherland_Dwarf_rabbit.txt
