[project]
name = "rabbitrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.4",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.2.0",
    "lancedb>=0.29.1",
    "pandas>=2.3.3",
    "pydantic-ai>=1.56.0",
    "pypdf>=6.6.2",
    "streamlit>=1.54.0",
    "uvicorn>=0.40.0",
]
